# platform.core.uifw.voice-control

./: AUTHORS  CMakeLists.txt  NOTICE  changelog  org.tizen.voice.vcserver.service  vc-config.xml  vc-server.conf
client/: CMakeLists.txt  vc.c  vc_client.c  vc_client.h  vc_dbus.c  vc_dbus.h  vc_mgr.c  vc_mgr_client.c  vc_mgr_client.h  vc_mgr_dbus.c  vc_mgr_dbus.h  vc_setting.c  vc_widget.c  vc_widget_client.c  vc_widget_client.h  vc_widget_dbus.c  vc_widget_dbus.h
common/: vc_command.c  vc_command.h  vc_config_mgr.c  vc_config_mgr.h  vc_config_parser.c  vc_config_parser.h  vc_defs.h  vc_info_parser.c  vc_info_parser.h  vc_main.h
doc/: doxyfile  uix_vc_doc.h
include/: CMakeLists.txt  voice-control-engine.pc.in  voice-control-manager.pc.in  voice-control-setting.pc.in  voice-control-widget.pc.in  voice-control.pc.in  voice_control.h  voice_control_authority.h  voice_control_command.h  voice_control_command_expand.h  voice_control_common.h  voice_control_key_defines.h  voice_control_manager.h  voice_control_plugin_engine.h  voice_control_setting.h  voice_control_widget.h
packaging/: voice-control.spec
server/: CMakeLists.txt  vcd_client_data.c  vcd_client_data.h  vcd_config.c  vcd_config.h  vcd_dbus.c  vcd_dbus.h  vcd_dbus_server.c  vcd_dbus_server.h  vcd_engine_agent.c  vcd_engine_agent.h  vcd_main.c  vcd_main.h  vcd_recorder.c  vcd_recorder.h  vcd_server.c  vcd_server.h
